--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* limpar formatações padrão*/
+/* limpar formatação padrão */
 * {
   margin: 0;
   padding: 0;
@@ -14,7 +14,7 @@ body {
   border: solid red 1px;
 }
 
-/*--------------------Layout------------------- */
+/*-------------------- Layout ------------------- */
 
 #area-cabecalho {
   background-color: #f7b600;
@@ -91,7 +91,7 @@ a {
   background: #FFF;
 }
 
-/* ----------------------Formataçao geral---------------------- */
+/* ---------------------- Formataçao geral ---------------------- */
 h1 {
   color: #4e4e4e;
   font-size: 2.5em;
